--- a/chamber/styles/chamber-large.css
+++ b/chamber/styles/chamber-large.css
@@ -71,4 +71,37 @@
         margin-top: 0;
     }
 }
+/* Discover */
+@media (min-width: 641px) {
+  .discover-main {
+    grid-template-areas: "sidebar cards";
+    grid-template-columns: 250px 1fr;
+  }
+  .sidebar {
+    margin-bottom: 0;
+  }
+  .discover-grid {
+    grid-template-areas:
+      "card1 card2"
+      "card3 card4"
+      "card5 card6"
+      "card7 card8";
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (min-width: 1025px) {
+  .discover-grid {
+    grid-template-areas:
+      "card1 card2 card3 card4"
+      "card5 card6 card7 card8";
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media (min-width: 641px) {
+  .discover-card img:hover {
+    transform: scale(1.05) rotate(-2deg);
+    box-shadow: 0 8px 24px rgba(70,79,211,0.18);
+    filter: brightness(1.08) contrast(1.1);
+  }
+}
 
