--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -484,7 +484,16 @@ nav {
 .discover-card:nth-child(8) { grid-area: card8; }
 
 /* Image hover effect for medium/large screens only */
-
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  border: 0;
+}
 
 
 /*footer*/
